// FitSet ML Server 파일 목록 (2026-09-22). 정본은 DB, S3 에는 객체만.
// 코드: app/core/models.py (platforms, devices, exercises), app/data/models.py, app/phase/models.py
// models, model_files 는 설계안(코드 미반영). phase_models 와 같은 형태로 분류 모델도 DB 목록으로 옮기는 안.
// 2026-09-23 검토: 나머지 8개 테이블은 app/*/models.py 와 컬럼 단위로 일치 확인.

Project fitset_ml {
  database_type: 'SQLite'
  Note: '관리자 전용이라 api 컨테이너의 /data 볼륨에 둔 sqlite. MySQL 도 DATABASE_URL 만 바꾸면 된다. datetime 은 UTC.'
}

Table platforms {
  id int [pk, increment]
  name varchar(16) [unique, not null, note: 'ios | android']
  created_at datetime [not null, default: `now()`]
}

Table exercises {
  id int [pk, increment]
  index int [unique, not null, note: '모델 출력 인덱스. 0~13 은 배포 모델 고정, 14~206 은 slug 알파벳순']
  class_name varchar(64) [unique, not null, note: 'CLASSES 라벨, slug 대문자 스네이크']
  slug varchar(64) [unique, not null, note: '백엔드 exercises API slug']
  name varchar(128) [not null, note: '한글 이름']
  exercise_id varchar(36) [null, note: '백엔드 exercise UUID']
  phase_supported boolean [not null, default: false, note: '각도 규칙 유무로 결정, 렙카운팅 학습 가능']
  angle_joints varchar(32) [null, note: '각도를 만드는 관절 3개, 예 hip,kn,an. 검증된 3종목은 시드가 채움']
  down_is_decreasing boolean [null, note: '각도가 줄어드는 방향이 내려감인지']
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]

  Note: '운동 종목 마스터 207건. class-mapping.json 을 POST /exercises/seed 로 upsert. 업로드 종목 검증과 구간 라벨 규칙(angle_joints)의 정본. 규칙을 채우면 그 종목도 0 1 2 라벨링과 렙카운팅 학습이 열린다'
}

Table devices {
  id int [pk, increment]
  platform_id int [not null, ref: > platforms.id]
  device_id varchar(64) [not null, note: '앱이 보내는 기기 식별자, 파일명 채번 주인']
  created_at datetime [not null, default: `now()`]

  indexes {
    (platform_id, device_id) [unique, name: 'uq_device_platform_device']
    device_id
  }
}

Table dataset_files {
  id int [pk, increment]
  platform_id int [not null, ref: > platforms.id]
  device_fk int [not null, ref: > devices.id]
  exercise_fk int [null, ref: > exercises.id, note: 'class_name 이 마스터에 있으면 채움']
  filename varchar(128) [not null, note: '{CLASS}_{deviceId}_{NNNN}.csv 또는 .parquet(승격)']
  class_name varchar(64) [not null, note: 'CLASSES 원소']
  bucket varchar(64) [not null, note: 'fitset-dataset']
  s3_key varchar(256) [not null, note: '{platform}/raw/{index}_{class}/{filename}. 이관된 구 데이터는 raw/{class}/ 그대로']
  uploaded boolean [not null, default: false, note: 'presigned PUT 완료 확정']
  phase_labeled boolean [not null, default: false, note: 'phase 열 보유, 렙카운팅 학습 후보']
  trained_in_version varchar(32) [null, note: '마지막 분류 학습 버전 v1.x. model_files 로 대체 예정']
  created_at datetime [not null, default: `now()`, note: '등록 시각(구 collectedAt 이관)']
  updated_at datetime [not null, default: `now()`]

  indexes {
    (platform_id, filename) [unique, name: 'uq_dataset_platform_filename']
    class_name
  }
  Note: '학습 데이터셋 목록. 분류 모델과 렙카운팅 모델의 학습 원천. 구 fitset-dataset/{platform}/index.json'
}

Table collect_files {
  id int [pk, increment]
  platform_id int [not null, ref: > platforms.id]
  device_fk int [not null, ref: > devices.id]
  exercise_fk int [null, ref: > exercises.id]
  dataset_file_id int [null, unique, ref: - dataset_files.id, note: '승격되면 채워짐']
  filename varchar(128) [not null, note: 'CSV 이름, 영상은 같은 stem 의 .mov']
  class_name varchar(64) [not null, note: '구간 라벨링은 SQUAT, PUSHUP, DUMBBELL_CURL 만']
  csv_bucket varchar(64) [not null, note: 'fitset-collect-imu']
  csv_key varchar(256) [not null, note: '{platform}/{index}_{class}/{filename}']
  video_bucket varchar(64) [not null, note: 'fitset-collect-video']
  video_key varchar(256) [not null, note: '{platform}/{index}_{class}/{stem}.mov']
  uploaded boolean [not null, default: false, note: 'CSV, 영상 두 PUT 완료']
  video_start double [null, note: '영상 첫 프레임 unix 초, IMU 행과 프레임 대응 기준']
  rows int [null, note: 'CSV 데이터 행 수']
  status varchar(16) [not null, default: 'pending', note: 'pending | labeling | labeled | failed']
  error text [null, note: '워커 실패 사유']
  promoted_at datetime [null, note: 'dataset_files 승격 시각']
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]

  indexes {
    (platform_id, filename) [unique, name: 'uq_collect_platform_filename']
    class_name
    status
  }
  Note: '수집앱 IMU+영상 쌍. 라벨링 후 승격 버튼으로 dataset_files 에 연결'
}

Table phase_labels {
  id int [pk, increment]
  collect_file_id int [unique, not null, ref: - collect_files.id]
  data_bucket varchar(64) [not null, note: 'fitset-collect-labeled']
  data_key varchar(256) [not null, note: '{platform}/{index}_{class}/{stem}.parquet, timestamp ax..gz label phase']
  video_bucket varchar(64) [not null, note: 'fitset-collect-labeled']
  video_key varchar(256) [not null, note: '복사된 영상']
  pose_key varchar(256) [not null, note: '{stem}.pose.json, 프레임별 관절 33개와 phase']
  phase_summary json [not null, note: 'frames, fps, videoSeconds, detectedFraction, rows, rowPhaseCounts']
  labeled_at datetime [not null]
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]

  Note: '구간 라벨 결과, collect_files 와 1:1. 재라벨링은 이 행을 덮어쓴다'
}

Table models {
  id int [pk, increment]
  platform_id int [not null, ref: > platforms.id]
  version varchar(32) [not null, note: '플랫폼 안에서 v{major}.{minor}, MLflow run_name 과 같다']
  status varchar(16) [not null, default: 'training', note: 'training | completed | failed']
  bucket varchar(64) [not null, note: 'fitset-models']
  pt_key varchar(256) [null, note: '{platform}/{version}/model.pt (state_dict)']
  onnx_key varchar(256) [null, note: '{platform}/{version}/FitSet.onnx (Android)']
  mlpackage_key varchar(256) [null, note: '{platform}/{version}/FitSet.mlpackage.zip (iOS, 기기 컴파일)']
  meta_key varchar(256) [null, note: 'meta.json, classes mean std input_shape']
  classes json [not null, note: '출력 인덱스 순서의 종목 목록, CLASSES 스냅샷']
  window int [not null, default: 200, note: '입력 윈도우 행 수, 2초']
  stride int [not null, default: 100]
  epochs int [not null]
  lr double [not null]
  num_files int [not null, default: 0]
  metrics json [not null, note: 'val_accuracy, test_accuracy, f1_macro, f1_{class}, confusion_matrix']
  mlflow_run_id varchar(64) [null, note: 'experiment fitset-{platform}']
  deployed_at datetime [null, note: '배포 시각. 최신 배포 버전이 latest.json 에도 쓰인다']
  error text [null]
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]

  indexes {
    (platform_id, version) [unique, name: 'uq_model_version']
    status
  }
  Note: '종목 분류 모델 버전과 산출물 위치. 지금은 S3 meta.json·latest.json 과 MLflow 에만 있는 정보를 DB 로 옮긴다. 배포 포인터는 deployed_at 이 가장 최근인 completed 행'
}

Table model_files {
  model_id int [pk, ref: > models.id]
  dataset_file_id int [pk, ref: > dataset_files.id]

  Note: '분류 모델 학습에 쓰인 파일, models N:M dataset_files. dataset_files.trained_in_version 을 대체한다'
}

Table phase_models {
  id int [pk, increment]
  platform_id int [not null, ref: > platforms.id]
  exercise_fk int [null, ref: > exercises.id]
  class_name varchar(64) [not null, note: 'PHASE_CLASSES 원소, 종목별 모델']
  version varchar(32) [not null, note: '종목 안에서 v{major}.{minor}']
  status varchar(16) [not null, default: 'training', note: 'training | completed | failed']
  bucket varchar(64) [not null, note: 'fitset-phase-models']
  pt_key varchar(256) [null, note: '{platform}/{index}_{class}/{version}/FitSetPhase.pt']
  onnx_key varchar(256) [null, note: 'FitSetPhase.onnx (Android)']
  mlpackage_key varchar(256) [null, note: 'FitSetPhase.mlpackage.zip (iOS, 기기 컴파일)']
  meta_key varchar(256) [null, note: 'meta.json, mean std window classes']
  window int [not null, default: 50, note: '입력 윈도우 행 수, 0.5초']
  stride int [not null, default: 5, note: '학습 윈도우 stride']
  epochs int [not null, default: 20]
  lr double [not null, default: 0.001]
  num_files int [not null, default: 0]
  metrics json [not null, note: 'val, final(acc, f1, macro_f1, count_mae, per_file), label_counts']
  mlflow_run_id varchar(64) [null, note: 'experiment fitset-phase-{platform}']
  error text [null]
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]

  indexes {
    (platform_id, class_name, version) [unique, name: 'uq_phase_model_version']
    class_name
    status
  }
  Note: '종목별 렙카운팅(0 내려감, 1 올라감, 2 멈춤) 모델 버전과 산출물 위치. 구조는 분류 모델과 같은 CNN-LSTM, 정답만 phase. 산출물 3종은 항상 같이 만든다'
}

Table phase_model_files {
  phase_model_id int [pk, ref: > phase_models.id]
  dataset_file_id int [pk, ref: > dataset_files.id]

  Note: '모델 학습에 쓰인 파일, phase_models N:M dataset_files'
}
